stretch goal: created fixed nav and added opacity

--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,8 @@ p {
   align-items: center;
   padding: 15px;
   width: 100%;
+  position: fixed;
+  opacity: 0.95;
 }
 .nav-section h1 {
   font-size: 4rem;
@@ -198,6 +200,10 @@ p {
   .nav-section .nav {
     width: 100%;
   }
+}
+.creates-margin-for-fixed-nav {
+  width: 100%;
+  height: 102px;
 }
 footer {
   color: #22283B;
