--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,8 @@
   .flex-custom(column, center, center);
   padding: 15px;
   width: 100%;
+  position: fixed;
+  opacity: 0.95;
 
   h1 {
     font-size: @xl;
@@ -37,4 +39,9 @@
     }
   }
 
+}
+
+.creates-margin-for-fixed-nav {
+  width: 100%;
+  height: 102px;
 }
